updates fonts and css nesting

--- a/src/molecules/email-signup.scss
+++ b/src/molecules/email-signup.scss
@@ -3,17 +3,17 @@
 .email-signup {
   display: flex;
   max-width: 500px;
+}
 
-  .email-input {
-    height: calc(1.8em + 1rem + 2px);
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
+.email-signup__input {
+  height: calc(1.8em + 1rem + 2px);
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
 
-  .brand-button {
-    border-left: none;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
+.email-signup__button {
+  border-left: none;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
