--- a/src/styles/settings/_custom.scss
+++ b/src/styles/settings/_custom.scss
@@ -17,3 +17,7 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark
 );
+
+// Change global font font-family
+$font-family-base: $brand-font;
+$headings-font-weight: bold;
