--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,5 +1,10 @@
 $brand-primary: #e22d60;
-$brand-accent: #2dbbe2;
+$brand-secondary: #2dbbe2;
 $dark-gray: #3a3c48;
 
 $brand-font: "PT Sans";
+
+$tablet: 769px;
+$desktop: 960px;
+$widescreen: 1200px;
+$fullhd: 1430px;
