--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -2,7 +2,7 @@ $brand-primary: #e22d60;
 $brand-secondary: #2dbbe2;
 $dark-gray: #3a3c48;
 
-$brand-font: "PT Sans";
+$brand-font: 'PT Sans';
 
 $tablet: 769px;
 $desktop: 960px;
