updates class name and styles

--- a/src/organisms/signup-section.scss
+++ b/src/organisms/signup-section.scss
@@ -1,7 +1,7 @@
 @import 'settings/settings';
 
-.signup-container {
+.signup-section {
   background: $dark-gray;
   color: #fff;
-  padding: 7% 0;
+  padding: 7% 5%;
 }
